tests/src/frontend/typechecking/invalid/mutable_lambda_2.sk
mutable class Foo(mutable x: Int)

fun no(): () ~> void {
  x = mutable Foo(5);
  f: () -> void = (
    () -> {
      x.!x = x.x + 1
    }
  );
  f
}
